--- a/index.html
+++ b/index.html
@@ -4,21 +4,27 @@
     <meta charset="UTF-8">
     <title>Exceptional Realty Group - Luxury Homes - About</title>
     <!-- Don't forget to link your CSS file! -->
+  <link rel="stylesheet" href="./style.css" >
   </head>
   <body>
-    <header>
+    <header id="header">
       <!-- logo -->
       <h1>Exceptional Realty Group</h1>
 
       <nav>
-        <a href="index.html">About</a> <a href="new-properties.html">New Properties</a> <a href="real-estate-listings.html">Listings</a> <a href="market-report.html">Market Report</a> <a href="contact.html">Contact</a> <a href="http://hud.gov" target="_blank">H.U.D.</a>
+        <a class="nav" href="index.html">About</a> 
+        <a class="nav" href="new-properties.html">New Properties</a>
+        <a class="nav" href="real-estate-listings.html">Listings</a> 
+        <a class="nav" href="market-report.html">Market Report</a> 
+        <a class="nav" href="contact.html">Contact</a> 
+        <a class="nav" href="http://hud.gov" target="_blank">H.U.D.</a>
       </nav>
     </header>
 
     <section id="featured-property">
-      <figure>
+      <figure id="image">
         <img src="images/intro-pic.jpg" alt="A beautiful living room." title="Welcome to Exceptional Realty Group">
-        <figcaption>345 Carl Street Apt 12, Carrol Rd. Brooklyn, NY - Photo by Denise Richards.</figcaption>
+        <figcaption id="caption">345 Carl Street Apt 12, Carrol Rd. Brooklyn, NY - Photo by Denise Richards.</figcaption>
       </figure>
 
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae, perferendis nisi nihil debitis aspernatur doloribus quam eveniet quibusdam tempora esse! Repudiandae, assumenda, debitis doloribus ea eius ab at quae totam. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores, inventore aliquid ipsam debitis nulla vitae omnis nemo quisquam? Obcaecati dolor ipsum distinctio reprehenderit aliquid autem ea vel provident voluptas nisi.</p>
